add search_bar compontent

--- a/templates/base.templ
+++ b/templates/base.templ
@@ -1,15 +1,21 @@
 package templates
 
-templ Base() {
-	<!DOCTYPE html>
-	<html>
-	<head>
-		<title>Pokemon Search Engine</title>
-		<link rel="stylesheet" href="styles/main.css">
-	</head>
-	<body>
-		<h1>Hello World</h1>
-	</body>
-	</html>
+templ Base(content templ.Component) {
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Pokemon Search Engine</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="author" content="Matthias3130"> 
+
+	<link rel="stylesheet" href="/assets/styles/main.css">
+</head>
+<body>
+	<h1>Hello World</h1>
+	@content
+	
+</body>
+</html>
 }
 
