--- a/templates/base.templ
+++ b/templates/base.templ
@@ -12,7 +12,7 @@ templ Base(content templ.Component) {
 	<link rel="stylesheet" href="/assets/styles/main.css">
 </head>
 <body>
-	<h1>Hello World</h1>
+	<h1>Pokemon Search Engine</h1>
 	@content
 	
 </body>
