--- a/templates/base.templ
+++ b/templates/base.templ
@@ -2,7 +2,7 @@ package templates
 
 templ Base(content templ.Component) {
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Pokemon Search Engine</title>
 	<meta charset="UTF-8">
@@ -10,10 +10,12 @@ templ Base(content templ.Component) {
 	<meta name="author" content="Matthias3130"> 
 
 	<link rel="stylesheet" href="/assets/styles/main.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
 	<h1>Pokemon Search Engine</h1>
 	@content
+	<script></script>
 	
 </body>
 </html>
