--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,1 +1,22 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
+#table {
+  table-layout: auto;
+  width: auto;
+  text-align: center;
+  border-spacing: 1rem;
+}
+
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
